--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,9 +1,10 @@
-.drawer {
-    width: 20vh !important;
-    background-color: black !important;
+.drawer-content {
+    display: flex;
+    /* width: 20vh !important;
+    background-color: black !important; */
 }
 .listItems .text {
-    margin-left: 15px !important;
+    margin-left: 10px !important;
 }
 .logo {
     width: 150px !important;
@@ -14,4 +15,66 @@
 }
 #expandButtonItem {
     margin-left: 16px;
+}
+.collapse-menu {
+    margin-left: 30px;
+}
+.sidebar-boxes{
+    /* border-radius: 10px !important; */
+    /* box-sizing: border-box; */
+    /* margin: 10px; */
+    /* height: 450px; */
+    display: flex;
+    margin-top: auto;
+    margin-bottom: 15px;
+    /* justify-content: space-around; */
+    text-align: center;
+    align-items: center;
+    /* justify-content: space-between; */
+    flex-direction: column;
+    border-radius: 13px;
+    /* background-color: #7b2a2a; */
+}
+.sidebar-boxes .box {
+    width: 80%;
+    border: 1px solid rgb(196, 192, 191);
+    border-radius: 5px;
+    margin: 10px auto auto auto;
+    padding: 5px 0 0;
+    align-content: center;
+    text-align: left;
+}
+.sidebar-grid {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.grid-container{
+    width: 70%;
+    display: flex;
+    justify-content: center;
+}
+.clicked-item {
+    background-color: #2c5eff !important;
+    color: white !important;
+}
+.sidebar-item {
+    width: 85% !important;
+    height: 25% !important;
+    border: 2px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    cursor: pointer;
+    margin: 12px auto 12px auto !important;
+    color: blac;
+}
+.navigate {
+    text-decoration: none;
+    color: black;
+}
+.navigate:visited {
+    color: black;
 }
