--- a/src/pages/Instance.css
+++ b/src/pages/Instance.css
@@ -27,6 +27,7 @@
   padding: 0 3vh;
   margin-top: 5% !important;
   height: auto;
+  display: flex;
 }
 .container .inside {
   background-color: white !important;
@@ -38,37 +39,44 @@
   margin: 30px 0;
   border-radius: 10px;
 }
+/* .fixed {
+  position: sticky !important;
+} */
 .title {
   width: 100%;
   padding-bottom: 2vh;
   padding-top: 5vh;
 }
-.region-box {
+.item-box {
   width: 98%;
   border: 1px solid rgb(196, 192, 191);
   border-radius: 5px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   align-content: center;
   padding: 1vh;
   /* margin: 2vh;  */
 }
-.region-box-grid {
+.item-box-grid {
   justify-content: center;
   align-items: center;
 }
-.region-box-grid .item {
+.item-box-grid .item {
   display: flex;
   margin-right: 10px;
 }
-.selected-region {
+.selected-item {
   border: 3px solid #2c5eff;
 }
 .flag {
   width: 60px;
   height: 60px;
+}
+.os-image {
+  width: 60px !important;
+  height: 60px !important;
 }
 .table-container {
   margin-top: -15px;
@@ -76,4 +84,25 @@
 }
 .table-icons {
   margin: -10px !important;
+}
+.deploy-option {
+  width: 100% !important;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  margin: 15px auto;
+}
+.deploy-button {
+  width: 100% !important;
+  background-color: #00cd82 !important;
+  margin-bottom: 20px !important;
+}
+.cost {
+  width: 100% !important;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px auto;
 }
